<resources>
    <string name="app_name">Whatsapp</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="code">code</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="username">username</string>
    <string name="description">description</string>
    <string name="time">time</string>
    <string name="welcome_to_whatsapp">Welcome to Whatsapp</string>
    <string name="read_our_privacy_policy_tap_to_agree_and_continue_to_aceept_the_terms_of_service">Read our privacy policy.Tap to Agree and Continue to aceept the terms of service</string>
    <string name="agree_and_continue">Agree and Continue</string>
    <string name="enter_the_phone_number">Enter the Phone number</string>
    <string name="whatsapp_will_send_an_sms_to_verify_your_number_whats_your_number">Whatsapp will send an SMS to verify your Number,whats your number</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="sms_charges_may_apply">sms charges may apply</string>
    <string name="india">India</string>
    <string name="Google_API_key">AIzaSyD59K-FworlqS9GqXuaewL1C8CC7SfWxzM</string>
    <string name="profile_info">Profile info</string>
    <string name="type_the_persons_name">Type the persons name</string>
    <string name="select_contact">select contact</string>
    <string name="last_seen_today_12_35_a_m">Last seen Today 12:35 A.M.</string>
    <string name="type_your_message">Type your Message                          </string>
    <string name="this_is_a_text_message">This is a text message</string>
    <string name="gallery">gallery</string>
    <string name="documents">documents</string>
    <string name="audio">Audio</string>
    <string name="contacts">contacts</string>
    <string name="photo">Photo</string>
</resources>