<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Main.chats.ChatsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:elevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#128C7E"
            android:padding="10dp">


            <ImageButton
                android:id="@+id/back_bttn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#128C7E"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_person_24"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="5dp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="10dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_seen_today_12_35_a_m"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:textStyle="normal" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="always"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:clipChildren="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendbttn"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingTop="5dp"
                android:paddingEnd="25dp"
                android:paddingBottom="5dp">

                <ImageButton
                    android:id="@+id/emoji_bttn"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_tag_faces_24" />

                <EditText
                    android:id="@+id/tvmessage"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:freezesText="false"
                    android:hint="@string/type_your_message"
                    android:isScrollContainer="true"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:textIsSelectable="true"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/file"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@android:color/white"
                    android:padding="18dp"
                    android:src="@drawable/ic_baseline_attachment_24" />

                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:padding="19dp"
                    android:src="@drawable/ic_baseline_camera_alt_24" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendbttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#128C7E"
        android:src="@drawable/ic_baseline_mic_24"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/layout_actions"
        android:visibility="gone"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/gallery"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/gallery_button" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gallery" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/camer_button" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="camera" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/google_maps" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="location" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/google_docs" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/documents" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/apps_ds_audio" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/audio" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.mikhaellopez.circularimageview.CircularImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/system_contacts" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contacts" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>